# ModifiedQuizGame

./: README.md
Quiz_Game/: CMakeLists.txt  category.cpp  category.h  food.cpp  game.h  gaming.cpp  history.cpp  info.cpp  info.h  main.cpp  math.cpp  movie_show.cpp  music.cpp  sports.cpp  stats.cpp  stats.h  tech.cpp  viewStat.cpp  viewStat.h
